--- a/rustsolutions/Cargo.toml
+++ b/rustsolutions/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11.22", features = ["blocking"] }
 lazy_static = "1.4.0"
-trie-rs = "0.1.1" 
+rayon = "1.8.0"
